<resources>
    <string name="app_name">MoviesManager</string>
    <string name="name">Nome do filme</string>
    <string name="year">Ano de lançamento</string>
    <string name="duration">Duração (em minutos)</string>
    <string name="grade">Nota</string>
    <string name="watched">Filme já assistido</string>
    <string name="add_movie">Inserir Filme</string>
    <string name="studio">Estúdio</string>
    <string name="cancel">Voltar</string>
    <string name="confirm">Inserir</string>
    <string name="edit_movie">Editar filme</string>
    <string name="remove_movie">Remover filme</string>
    <string name="filter">Filtrar filmes</string>
    <string name="genre">Gênero</string>
    <string-array name="grades">
        <item>Não avaliado</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="genres">
        <string-array name="genresChoice">
            <item>Ação</item>
            <item>Aventura</item>
            <item>Cinema de arte</item>
            <item>Chanchada</item>
            <item>Comédia</item>
            <item>Comédia de ação</item>
            <item>Comédia de terror</item>
            <item>Comédia dramática</item>
            <item>Comédia romântica</item>
            <item>Dança</item>
            <item>Documentário</item>
            <item>Docuficção</item>
            <item>Drama</item>
            <item>Espionagem</item>
            <item>Faroeste</item>
            <item>Fantasia</item>
            <item>Fantasia científica</item>
            <item>Ficção científica</item>
            <item>Filmes com truques</item>
            <item>Filmes de guerra</item>
            <item>Mistério</item>
            <item>Musical</item>
            <item>Filme policial</item>
            <item>Romance</item>
            <item>Terror</item>
            <item>Thriller</item>
        </string-array>
    </string-array>
</resources>